mejoré textitos y los puse en <em>

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           </div><!--span4-->
           <div class="span8">
             <p>
-              Creá un nuevo mapa usando la plantlla. Es tan simple como completar campos de título, ubicación y/o URLs en las columnas apropiadas.            
+              <em>Creá un nuevo mapa usando la plantlla. Es tan simple como completar campos de título, ubicación y/o URLs en las columnas apropiadas.</em>
             </p>
             <p>
               <a target="_blank" class="btn btn-primary" href="https://drive.google.com/previewtemplate?id=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&mode=public">Plantilla de Google Spreadsheet &raquo;</a>
@@ -244,8 +244,8 @@
             </small>
             </h3>          
             <p>
-              Después de copiar la URL que google te da, podés copiar el código para incrustar en tu sitio (tal cual como
-              harías para incrustar un video de Youtube por ejemplo).
+              <em>Después de copiar la URL que google te da, podés copiar el</em> <strong>Código para incrustar</strong> <em>y pegarlo en tu sitio (tal cual como
+              harías para incrustar un video de Youtube por ejemplo).</em>
             </p>
           </div><!--span4-->
           <div class="span8">
@@ -256,10 +256,10 @@
                 <!-- Embed Source-->
                 <!-- Embed Optional-->
                 <div class="control-group">
-                  <label for="embed-source-url" class="control-label"> <a href="https://drive.google.com/previewtemplate?id=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&mode=public" target="_blank">URL de la Google Spreadsheet</a></label>
+                  <label for="embed-source-url" class="control-label">URL de tu Google Spreadsheet</label>
                   <div class="controls">
                     <input type="text" id="embed-source-url">
-                    <p class="help-inline">Asegurate de haberla publicado.</p>
+                    <p class="help-inline"><em>Asegurate de haberla publicado.</em></p>
                   </div>
                 </div>
                 <!-- Size-->
@@ -279,10 +279,10 @@
                 <div class="control-group">
                   <label for="embed-code" class="control-label"> <strong>Código para incrustar</strong></label>
                   <div class="controls">
-                    <p>Copiá este código y pegalo en donde quieras que tu mapa aparezca.<br>
-                    </p>
                     <textarea readonly="readonly" style="width: 100%; height: 160px; min-height: 110px; max-height: 300px; resize: none; font-family: Menlo,Monaco,'Courier New',monospace;font-size:.9em" id="embed-code">
 &lt;iframe src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc' width='600' height='500' frameborder='0'&gt;&lt;/iframe&gt;</textarea>
+                    <p><em>Copiá este código y pegalo en donde quieras que tu mapa aparezca.</em>
+                    </p>
                     <hr/>
                     <div style="margin-top:20px;"><input id="iframe-preview-button" type="submit" class="btn btn-primary" value="Previsualizar" />&nbsp;<a href="iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc" target="_blank" id="preview-embed-link" >Link a la previsualización</a></div>
                   </div>
