cambié texto y el readonly del textarea

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
           <div class="span4">
             <h3>Paso 3<br/>
               <small>
-              Copiá y pegá la URL de tu google spreadsheet pública en el generador
+              Pegá la URL de tu spreadsheet
             </small>
             </h3>          
             <p>
@@ -279,7 +279,7 @@
                 <div class="control-group">
                   <label for="embed-code" class="control-label"> <strong>Código para incrustar</strong></label>
                   <div class="controls">
-                    <textarea readonly="readonly" style="width: 100%; height: 160px; min-height: 110px; max-height: 300px; resize: none; font-family: Menlo,Monaco,'Courier New',monospace;font-size:.9em" id="embed-code">
+                    <textarea  style="width: 100%; height: 100px; min-height: 110px; max-height: 300px; resize: none; font-family: 'Courier New',monospace;font-size:.8em" id="embed-code">
 &lt;iframe src='http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc' width='600' height='500' frameborder='0'&gt;&lt;/iframe&gt;</textarea>
                     <p><em>Copiá este código y pegalo en donde quieras que tu mapa aparezca.</em>
                     </p>
