agregué un acronym

--- a/index.html
+++ b/index.html
@@ -421,7 +421,8 @@
 					'Work on Any Map Painlessly',
 					'Wings Against Mapping Problems',
 					'Write A Map Patriotically',
-					'Work on A Map Promptly'
+					'Work on A Map Promptly',
+          'Wonderful Approach on Maps for Periodistas'
 				];
 			
 			setInterval(function () {
