typos y urls locales

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
              </li>
             <li>
               Este proyecto se propone acercar los servicios WMS y los KML ya publicados a quienes no dispongan de mayores habilidades informáticas
-              que el manejo del una planilla de cálculos y una cuenta de Google. 
+              que el manejo de una planilla de cálculos y una cuenta de Google. 
             </li>
             <li>
               Esta herramienta está construída como 2 html y una plugin de jquery. que
@@ -192,7 +192,7 @@
           </div><!--span4-->
           <div class="span8">
             <p>
-              <em>Creá un nuevo mapa usando la plantlla. Es tan simple como completar campos de título, ubicación y/o URLs en las columnas apropiadas.</em>
+              <em>Creá un nuevo mapa usando la plantilla. Es tan simple como completar campos de título, ubicación y/o URLs en las columnas apropiadas.</em>
             </p>
             <p>
               <a target="_blank" class="btn btn-primary" href="https://drive.google.com/previewtemplate?id=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&mode=public">Plantilla de Google Spreadsheet &raquo;</a>
@@ -314,7 +314,7 @@
               <div class="thumbnail">
                 <img alt="preview del mapa de unundaciones en La Plata de Abril 2013"  src="img/ejemplos/inundacioneslaplata.jpg">
                 <div class="caption">
-                  <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdEk2WWZXNzNVQWN6RzhsY0x0eG0yUVE">Inundaciones La Plata</a></h4>
+                  <h4><a target="_blank" href="iframe.html?source=0AqdTbs1TYvZKdEk2WWZXNzNVQWN6RzhsY0x0eG0yUVE">Inundaciones La Plata</a></h4>
                   <p>Combina dos capas WMS de imágenes satelitales y archivos KML.</p>
                 </div>
               </div>
@@ -323,7 +323,7 @@
               <div class="thumbnail">
                 <img alt="preview de mapa con distribución de pueblos originarios en Argentina"  src="img/ejemplos/pueblosoriginarios.jpg">
                 <div class="caption">
-                  <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdFB6b3lyRzFCZ0xwODRGS0VMQW9TNGc">Pueblos originarios</a></h4>
+                  <h4><a target="_blank" href="iframe.html?source=0AqdTbs1TYvZKdFB6b3lyRzFCZ0xwODRGS0VMQW9TNGc">Pueblos originarios</a></h4>
                   <p>Usa un KML online que proviene desde el servidor de mapas de Mapa Educativo.</p>
                 </div>
               </div>
@@ -332,7 +332,7 @@
               <div class="thumbnail">
                 <img alt="preview de mapa con anuncios de delito"  src="img/ejemplos/delitos.jpg">
                 <div class="caption">
-                  <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AnwT7fFVm7qsdHhvLVNVN3pRWFM3ZVVOQ19rZ2trUGc">Anuncios de delitos en vivo</a></h4>
+                  <h4><a target="_blank" href="iframe.html?source=0AnwT7fFVm7qsdHhvLVNVN3pRWFM3ZVVOQ19rZ2trUGc">Anuncios de delitos en vivo</a></h4>
                   <p>Combina dos recursos JSON online, de denuncias y de comisarías, tomados por un script incluído en la spreadsheet.</p>                  
                 </div>
               </div>
@@ -341,7 +341,7 @@
               <div class="thumbnail">
                 <img alt="preview de mapa con datos de INTA"  src="img/ejemplos/cuencasinta.jpg">
                 <div class="caption">
-                  <h4><a target="_blank" href="http://argenwamp.com.ar/iframe.html?source=0AqdTbs1TYvZKdHZkZUc5cHlyVVdlZW1EVy16NWV3MUE">Cuencas hídricas según INTA</a></h4>
+                  <h4><a target="_blank" href="iframe.html?source=0AqdTbs1TYvZKdHZkZUc5cHlyVVdlZW1EVy16NWV3MUE">Cuencas hídricas según INTA</a></h4>
                   <p>Muestra una capa WMS de cuencas hídricas proveniente del Instituto Nacional de Tecnología Agropecuaria.</p>                  
                 </div>
               </div>
