--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <header class="hero-unit" style="color:inherit;background-color:white;border-top:1px solid #ccc;border-bottom:1px solid #ccc;">
       <div class="container-fluid text-center">
-        <h1>Argen<span class="Vis">WAMP</span><br/></h1>
+        <h1>argen<span class="Vis">WAMP</span><br/></h1>
         <h2><span class="wamp hidden-tablet hidden-phone">Web Anamorphic Maps Player</span><br/>
           <small>Creá un mapa web de Argentina para incrustar en tu sitio <span class="strong">a partir de una hoja de cálculo </span></small>
         </h2>
