agregué capa mapaignbyn que es la capa Mapa IGN, pero le agrega clase .argenmapvis_byn al container del mapa. En iframe.html está definiido un filter:grayscale() sobre las imagenes y el argenmapmapfooter

--- a/iframe.html
+++ b/iframe.html
@@ -79,7 +79,19 @@
         background: transparent;
         border: 0;
         -webkit-appearance: none;
-      }      
+      }     
+
+      .argenmapvis_byn img {
+        -webkit-filter:grayscale(100%);
+        -moz-filter:grayscale(100%);
+        -filter:grayscale(100%);
+      } 
+
+      .argenmapvis_byn .argenmapMapFooter {
+        background-color:#ccc !important;
+        box-shadow:none;
+      }
+
     </style>
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
