no andaba el box-shadow none. le faltaba important

--- a/iframe.html
+++ b/iframe.html
@@ -89,7 +89,7 @@
 
       .argenmapvis_byn .argenmapMapFooter {
         background-color:#ccc !important;
-        box-shadow:none;
+        box-shadow:none !important;
       }
 
     </style>
