--- a/iframe.html
+++ b/iframe.html
@@ -88,7 +88,7 @@
       } 
 
       .argenmapvis_byn .argenmapMapFooter {
-        background-color:#ccc !important;
+        background-color:#888 !important;
         box-shadow:none !important;
       }
 
