--- a/iframe.html
+++ b/iframe.html
@@ -100,14 +100,14 @@
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
+      <script src="lib/html5shiv.js"></script>
     <![endif]-->
 
   <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
   
   
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-  <script type="text/javascript" src="http://www.ign.gob.ar/argenmap/argenmap.jquery/argenmap.jquery.js"></script>
+  <script type="text/javascript" src="http://www.ign.gob.ar/argenmap/argenmap.jquery.min.js"></script>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/sugar/1.3.9/sugar.min.js"></script>
   <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-url-parser/2.3.1/purl.min.js"></script>  
