linkeo bien a html5shiv.js

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
+      <script src="lib/html5shiv.js"></script>
     <![endif]-->
 
     <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
@@ -99,7 +99,7 @@
 
     <header class="hero-unit" style="color:inherit;background-color:white;border-top:1px solid #ccc;border-bottom:1px solid #ccc;">
       <div class="container-fluid text-center">
-        <h1>argen<span class="Vis">WAMP</span><br/></h1>
+        <h1>Argen<span class="Vis">WAMP</span><br/></h1>
         <h2><span class="wamp hidden-tablet hidden-phone">Web Anamorphic Maps Player</span><br/>
           <small>Creá un mapa web de Argentina para incrustar en tu sitio <span class="strong">a partir de una hoja de cálculo </span></small>
         </h2>
