agregué requerimientos a la parte de Descripción y links a wikipedia para las palabras KML y WMS

--- a/index.html
+++ b/index.html
@@ -138,12 +138,13 @@
               Puede traer datos de múltiples fuentes y soporta:
             </p>
             <ul>
-              <li>Capas WMS</li>
-              <li>Capas KML ya publicadas en la web</li>
+              <li>Capas <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a></li>
+              <li>Capas <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> ya publicadas en la web</li>
               <li>Marcadores a partir de coordenadas o Geocoding (basado en nominatim de OpenStreetMap).</li>
             </ul>
           </div><!--span6-->          
         </div><!--row-fluid-->
+
         <div class="alert">
           <h3><em>Criteria</em></h3>
           <ul>
@@ -180,6 +181,16 @@
       <section id="generator">
         <div class="page-header">
           <h2 >Construí tu mapa <small>En tu sitio o blog en poco tiempo.</small></h2>
+        </div>
+        <div class="row-fluid">
+          <div class="span12">
+            <h3>Requerimientos</h3>
+            <ul>
+              <li>Que estés familiarizado con <a href="http://es.wikipedia.org/wiki/Google_Docs" target="_blank">Google Docs</a> y las hojas de cálculo.</li>
+              <li>Que tengas una <a href="https://accounts.google.com/SignUp" target="_blank">cuenta de Google Docs</a>.</li>
+              <li>Que entiendas aproximadamente lo que es <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a> y <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> si querés usar algo más que marcadores</li>
+            </ul>
+          </div>
         </div>
         <div class="row-fluid">
           <div class="span4">
