--- a/iframe.html
+++ b/iframe.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="robots" content="noindex" />
+    
     <link rel="shortcut icon" href="img/ico/favicon.png">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=News+Cycle:400,700|Merriweather:400,300,700">
     <style type="text/css">
