cambié color predeterminado para links en la barra de título

--- a/iframe.html
+++ b/iframe.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="robots" content="noindex" />
-    
+
     <link rel="shortcut icon" href="img/ico/favicon.png">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=News+Cycle:400,700|Merriweather:400,300,700">
     <style type="text/css">
@@ -51,6 +51,10 @@
         font-size: 12px;
         line-height: 12px;
         text-transform: uppercase;
+      }
+
+      .barra a {
+        color:inherit !important;
       }
 
       .close {
