--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       <div class="container">
         <div class="row-fluid">
           <div class="span12">
-            @osk 2013 . Desarrollado para y durante el <a target="_blank" href="http://datospublicos.gob.ar/hackatonprogramar/">Hackatón programAR</a>.<br/>
+            <a target="_blank" href="https://plus.google.com/113215844390588012082?rel=author">@oskosk</a> 2013 . Desarrollado para y durante el <a target="_blank" href="http://datospublicos.gob.ar/hackatonprogramar/">Hackatón programAR</a>.<br/>
             <a target="_blank" href="http://github.com/oskosk/argenwamp">Repo en Github</a>.            
           </div>  
         </div>
