--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 <img alt="preview de mapa con anuncios de delito"  src="img/ejemplos/delitos.jpg">
                 <div class="caption">
                   <h4><a target="_blank" href="iframe.html?source=0AnwT7fFVm7qsdHhvLVNVN3pRWFM3ZVVOQ19rZ2trUGc">Anuncios de delitos en vivo</a></h4>
-                  <p>Combina dos recursos JSON online, de denuncias y de comisarías, tomados por un script incluído en la spreadsheet.</p>                  
+                  <p>Combina dos recursos JSON online, de denuncias y de comisarías, tomados por un script incluido en la spreadsheet.</p>                  
                 </div>
               </div>
             </li>
