ortografía by Martin Castagnet

--- a/index.html
+++ b/index.html
@@ -149,31 +149,25 @@
           <h3><em>Criteria</em></h3>
           <ul>
             <li>
-            Muchas personas están acostumbradas a las planillas de cálculo como estructuras
-            de datos.
+            Muchas personas están acostumbradas a las planillas de cálculo como estructuras de datos.
             </li>
             <li>
               El código de esta herramienta consume JSON.
             </li>
             <li>
-              Google Ofrece por cada documento publicado una url con el documento JSON que representa
-            al documento spreadsheet. Es por eso que esta herramienta sirve para consumir JSON
-            de otra fuente.
+              Google ofrece por cada documento publicado una url con el documento JSON que representa al documento spreadsheet. Es por eso que esta herramienta sirve para consumir JSON de otra fuente.
             </li>
             <li>
-              <strong>Sí, los "datos" quedan guardados en google</strong>. Pero, no hace falta guardar los datos más importantes
-              del mundo en este tipo de mapas.
+              <strong>Sí, los "datos" quedan guardados en google</strong>. Pero, no hace falta guardar los datos más importantes del mundo en este tipo de mapas.
             </li>
             <li>
                Es una herramienta útil para bocetar mapas a partir de KML o servicios WMS (datos ya publicados conforme a estándares abiertos). 
              </li>
             <li>
-              Este proyecto se propone acercar los servicios WMS y los KML ya publicados a quienes no dispongan de mayores habilidades informáticas
-              que el manejo de una planilla de cálculos y una cuenta de Google. 
+              Este proyecto se propone acercar los servicios WMS y los KML ya publicados a quienes no dispongan de mayores habilidades informáticas que el manejo de una planilla de cálculos y una cuenta de Google. 
             </li>
             <li>
-              Esta herramienta está construída como 2 html y una plugin de jquery. que
-              interpreta json. Sea cual sea el origen (Google Docs, una URL de un documento JSON o un objeto javascript)
+              Esta herramienta está construída como 2 html y una plugin de jquery. que interpreta json. Sea cual sea el origen (Google Docs, una URL de un documento JSON o un objeto javascript).
             </li>
           </ul>
         </div><!--alert-->
@@ -188,7 +182,7 @@
             <ul>
               <li>Que estés familiarizado con <a href="http://es.wikipedia.org/wiki/Google_Docs" target="_blank">Google Docs</a> y las hojas de cálculo.</li>
               <li>Que tengas una <a href="https://accounts.google.com/SignUp" target="_blank">cuenta de Google Docs</a>.</li>
-              <li>Que entiendas aproximadamente lo que es <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a> y <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> si querés usar algo más que marcadores</li>
+              <li>Que entiendas aproximadamente lo que es <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a> y <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> si querés usar algo más que marcadores.</li>
             </ul>
           </div>
         </div>
