ortografía by Martin Castagnet

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <div class="span6">
             <ul>
                 <li><strong>Este mapa va a estar siempre online</strong> tengas o no servidor porque se basa en la infraestructura de Google Docs.</li>
-                <li>Podés incrustar el mapa en tu web o compartir el link</li>.
+                <li>Podés incrustar el mapa en tu web o compartir el link.</li>
             </ul>
           </div><!--span6-->
           <div class="span6">
@@ -138,8 +138,8 @@
               Puede traer datos de múltiples fuentes y soporta:
             </p>
             <ul>
-              <li>Capas <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a></li>
-              <li>Capas <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> ya publicadas en la web</li>
+              <li>Capas <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a>.</li>
+              <li>Capas <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> ya publicadas en la web.</li>
               <li>Marcadores a partir de coordenadas o Geocoding (basado en nominatim de OpenStreetMap).</li>
             </ul>
           </div><!--span6-->          
@@ -312,7 +312,7 @@
         <div class="page-header">
           <h2>Ejemplos</h2>
         </div>
-        <h3>Estos son algunos ejemplos simples creados con argenwamp</h3>
+        <h3>Estos son algunos mapas simples creados con argenwamp</h3>
         <div class="row-fluid" >
           <ul class="thumbnails">
             <li class="span3">
