agregué word-wrap al estilo de la descripcion

--- a/iframe.html
+++ b/iframe.html
@@ -51,6 +51,7 @@
         font-size: 12px;
         line-height: 12px;
         text-transform: uppercase;
+        word-wrap: break-word;
       }
 
       .barra a {
