--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
           <li class="active"><a href="#descripcion">Descripción</a></li>
           <li><a href="#generator">Creá tu mapa</a></li>
           <li><a href="#ejemplos">Ejemplos</a></li>            
+	  <li style="padding: 7px 12px">
+<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+<g:plusone ></g:plusone>
+          </li>
         </ul>
       </div>
     </div>
@@ -110,7 +114,8 @@
       <section>
         <div class="row-fluid">
           <div class="span12">
-            <p >Este mapa, a partir de <a target="_blank" href="https://drive.google.com/previewtemplate?id=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&mode=public">esta spreadsheet.</a></p>
+            <p >Este mapa, a partir de <a target="_blank" href="https://drive.google.com/previewtemplate?id=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&mode=public">esta spreadsheet.</a>
+	    </p>
             <iframe title="mapa creado con argenwamp" style="width:100%;border:1px dashed #ccc" src='iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
           </div>
         </div>
