agregué badge y formatee un par de párrafos

--- a/index.html
+++ b/index.html
@@ -127,18 +127,18 @@
           <h2>Descripción</h2>
         </div>
 
-        <p class="lead">
-          ArgenWamp es una herramienta open source que te permite construir mapas con datos
-          guardados en una Google Spreadsheet.
-        </p>
         <div class="row-fluid">
-          <div class="span6">
+          <div class="span4">
+            <p class="lead">
+              ArgenWamp es una herramienta de software libre que te permite construir mapas con datos
+              guardados en una Google Spreadsheet.
+            </p>            
             <ul>
                 <li><strong>Este mapa va a estar siempre online</strong> tengas o no servidor porque se basa en la infraestructura de Google Docs.</li>
                 <li>Podés incrustar el mapa en tu web o compartir el link.</li>
             </ul>
           </div><!--span6-->
-          <div class="span6">
+          <div class="span4">
             <p>
               Puede traer datos de múltiples fuentes y soporta:
             </p>
@@ -148,34 +148,52 @@
               <li>Marcadores a partir de coordenadas o Geocoding (basado en nominatim de OpenStreetMap).</li>
             </ul>
           </div><!--span6-->          
-        </div><!--row-fluid-->
+          <div class="span4">
+             <!-- Place this tag where you want the widget to render. -->
+            <div class="g-page" data-href="//plus.google.com/105397909156980633205" data-rel="publisher"></div>
 
-        <div class="alert">
-          <h3><em>Criteria</em></h3>
-          <ul>
-            <li>
-            Muchas personas están acostumbradas a las planillas de cálculo como estructuras de datos.
-            </li>
-            <li>
-              El código de esta herramienta consume JSON.
-            </li>
-            <li>
-              Google ofrece por cada documento publicado una url con el documento JSON que representa al documento spreadsheet. Es por eso que esta herramienta sirve para consumir JSON de otra fuente.
-            </li>
-            <li>
-              <strong>Sí, los "datos" quedan guardados en google</strong>. Pero, no hace falta guardar los datos más importantes del mundo en este tipo de mapas.
-            </li>
-            <li>
-               Es una herramienta útil para bocetar mapas a partir de KML o servicios WMS (datos ya publicados conforme a estándares abiertos). 
-             </li>
-            <li>
-              Este proyecto se propone acercar los servicios WMS y los KML ya publicados a quienes no dispongan de mayores habilidades informáticas que el manejo de una planilla de cálculos y una cuenta de Google. 
-            </li>
-            <li>
-              Esta herramienta está construída como 2 html y una plugin de jquery. que interpreta json. Sea cual sea el origen (Google Docs, una URL de un documento JSON o un objeto javascript).
-            </li>
-          </ul>
-        </div><!--alert-->
+            <!-- Place this tag after the last widget tag. -->
+            <script type="text/javascript">
+              window.___gcfg = {lang: 'es-419'};
+
+              (function() {
+                var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+                po.src = 'https://apis.google.com/js/plusone.js';
+                var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+              })();
+            </script>
+          </div>
+        </div><!--row-fluid-->
+        <div class="row-fluid">
+          <div class="span8">
+            <div class="alert">
+              <h3><em>Criteria</em></h3>
+              <ul>
+                <li>
+                Muchas personas están acostumbradas a las planillas de cálculo como estructuras de datos.
+                </li>
+                <li>
+                  El código de esta herramienta consume JSON.
+                </li>
+                <li>
+                  Google ofrece por cada documento publicado una url con el documento JSON que representa al documento spreadsheet. Es por eso que esta herramienta sirve para consumir JSON de otra fuente.
+                </li>
+                <li>
+                  <strong>Sí, los "datos" quedan guardados en google</strong>. Pero, no hace falta guardar los datos más importantes del mundo en este tipo de mapas.
+                </li>
+                <li>
+                   Es una herramienta útil para bocetar mapas a partir de KML o servicios WMS (datos ya publicados conforme a estándares abiertos). 
+                 </li>
+                <li>
+                  Este proyecto se propone acercar los servicios WMS y los KML ya publicados a quienes no dispongan de mayores habilidades informáticas que el manejo de una planilla de cálculos y una cuenta de Google. 
+                </li>
+                <li>
+                  Esta herramienta está construída como 2 html y una plugin de jquery. que interpreta json. Sea cual sea el origen (Google Docs, una URL de un documento JSON o un objeto javascript).
+                </li>
+              </ul>
+            </div><!--alert-->
+          </div>
+        </div>
       </section>      
       <section id="generator">
         <div class="page-header">
