--- a/index.html
+++ b/index.html
@@ -93,15 +93,29 @@
           <li class="active"><a href="#descripcion">Descripción</a></li>
           <li><a href="#generator">Creá tu mapa</a></li>
           <li><a href="#ejemplos">Ejemplos</a></li>            
-	  <li style="padding: 7px 12px">
-<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
-<g:plusone ></g:plusone>
-          </li>
         </ul>
       </div>
     </div>
-
     <header class="hero-unit" style="color:inherit;background-color:white;border-top:1px solid #ccc;border-bottom:1px solid #ccc;">
+    <div class="row-fluid">
+      <div class="span12">
+        <!-- Place this tag where you want the share button to render. -->
+        <div style="float:right">
+          <div class="g-plus" data-action="share" data-width="200" data-height="24"></div>
+
+          <!-- Place this tag after the last share tag. -->
+          <script type="text/javascript">
+            window.___gcfg = {lang: 'es-419'};
+
+            (function() {
+              var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+              po.src = 'https://apis.google.com/js/plusone.js';
+              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+            })();
+          </script>
+        </div>
+      </div>
+    </div>
       <div class="container-fluid text-center">
         <h1>Argen<span class="Vis">WAMP</span><br/></h1>
         <h2><span class="wamp hidden-tablet hidden-phone">Web Anamorphic Maps Player</span><br/>
@@ -115,7 +129,7 @@
         <div class="row-fluid">
           <div class="span12">
             <p >Este mapa, a partir de <a target="_blank" href="https://drive.google.com/previewtemplate?id=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&mode=public">esta spreadsheet.</a>
-	    </p>
+      </p>
             <iframe title="mapa creado con argenwamp" style="width:100%;border:1px dashed #ccc" src='iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
           </div>
         </div>
