saqué ejemplo de delitos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,12 @@
         font-family: 'Merriweather',serif !important;        
         text-rendering: optimizelegibility;
       }
-
+      body h2 {
+        font-size:1.3 em;
+      }
+      .alert {
+        border: 1px solid #c09853;
+      }
       span.Vis  {
         color: #FFF;
         font-size: .9em;
@@ -96,7 +101,11 @@
         </ul>
       </div>
     </div>
+      <div class="alert text-center" >
+        Esta aplicación es 100% funcional y es muy estable. Lee <a href="#comofuncionaargenwamp">Cómo funciona ArgenWAMP</a> para la justificación de esto.
+      </div>    
     <header class="hero-unit" style="color:inherit;background-color:white;border-top:1px solid #ccc;border-bottom:1px solid #ccc;">
+
     <div class="row-fluid">
       <div class="span12">
         <!-- Place this tag where you want the share button to render. -->
@@ -370,15 +379,6 @@
                 </div>
               </div>
             </li>            
-            <li class="span3">
-              <div class="thumbnail">
-                <img alt="preview de mapa con anuncios de delito"  src="img/ejemplos/delitos.jpg">
-                <div class="caption">
-                  <h4><a target="_blank" href="iframe.html?source=0AnwT7fFVm7qsdHhvLVNVN3pRWFM3ZVVOQ19rZ2trUGc">Anuncios de delitos en vivo</a></h4>
-                  <p>Combina dos recursos JSON online, de denuncias y de comisarías, tomados por un script incluido en la spreadsheet.</p>                  
-                </div>
-              </div>
-            </li>
             <li class="span3">
               <div class="thumbnail">
                 <img alt="preview de mapa con datos de INTA"  src="img/ejemplos/cuencasinta.jpg">
