--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         font-family: 'Merriweather',serif !important;        
         text-rendering: optimizelegibility;
       }
-      body h2 {
-        font-size:1.3 em;
+      .page-header h2 {
+        color: #888;
       }
       .alert {
         border: 1px solid #c09853;
@@ -94,15 +94,15 @@
   <body>
     <div class="container-fluid">
       <div class="masthead">
-        <ul class="nav nav-pills pull-right">
+        <ul class="nav  nav-pills pull-right">
           <li class="active"><a href="#descripcion">Descripción</a></li>
-          <li><a href="#generator">Creá tu mapa</a></li>
+          <li><a href="#generator">Armá tu mapa</a></li>
           <li><a href="#ejemplos">Ejemplos</a></li>            
         </ul>
       </div>
     </div>
       <div class="alert text-center" >
-        Esta aplicación es 100% funcional y es muy estable. Lee <a href="#comofuncionaargenwamp">Cómo funciona ArgenWAMP</a> para la justificación de esto.
+        Esta aplicación es 100% funcional y es muy estable. Lee <a href="#what_sorcery_is_this">Cómo funciona ArgenWAMP</a> para la justificación de esto.
       </div>    
     <header class="hero-unit" style="color:inherit;background-color:white;border-top:1px solid #ccc;border-bottom:1px solid #ccc;">
 
@@ -128,16 +128,16 @@
       <div class="container-fluid text-center">
         <h1>Argen<span class="Vis">WAMP</span><br/></h1>
         <h2><span class="wamp hidden-tablet hidden-phone">Web Anamorphic Maps Player</span><br/>
-          <small>Creá un mapa web de Argentina para incrustar en tu sitio <span class="strong">a partir de una hoja de cálculo </span></small>
+          <small>armá un mapa web de Argentina para incrustar en tu sitio <span class="strong">a partir de una hoja de cálculo </span></small>
         </h2>
-        <a href="#generator" class="btn btn-large btn-success">Creá tu mapa ahora &raquo;</a>
+        <a href="#generator" class="btn btn-large btn-success">Armá tu mapa ahora &raquo;</a>
       </div>
     </header>  
     <div class="container">
       <section>
         <div class="row-fluid">
           <div class="span12">
-            <p >Este mapa, a partir de <a target="_blank" href="https://docs.google.com/spreadsheet/pub?key=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&output=html">esta spreadsheet.</a>
+            <p >Por ejemplo, el siguiente mapa a partir de <a target="_blank" href="https://docs.google.com/spreadsheet/pub?key=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&output=html">esta spreadsheet.</a>
       </p>
             <iframe title="mapa creado con argenwamp" style="width:100%;border:1px dashed #ccc" src='iframe.html?source=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc;width=600&height=600' height='350' frameborder='0'></iframe>                
           </div>
@@ -156,21 +156,70 @@
               ArgenWamp es una herramienta de software libre que te permite construir mapas con datos
               guardados en una Google Spreadsheet.
             </p>            
+          </div><!--span6-->
+          <div class="span4">
             <ul>
                 <li><strong>Este mapa va a estar siempre online</strong> tengas o no servidor porque se basa en la infraestructura de Google Docs.</li>
                 <li>Podés incrustar el mapa en tu web o compartir el link.</li>
-            </ul>
-          </div><!--span6-->
+            </ul>            
+          </div>
           <div class="span4">
             <p>
               Puede traer datos de múltiples fuentes y soporta:
             </p>
             <ul>
-              <li>Capas <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a>.</li>
-              <li>Capas <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> ya publicadas en la web.</li>
               <li>Marcadores a partir de coordenadas o Geocoding (basado en nominatim de OpenStreetMap).</li>
+              <li>Capas <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> ya publicadas en la web.</li>
+              <li>Capas <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a> en <code>SRS=EPSG:3857</code>.</li>              
             </ul>
           </div><!--span6-->          
+
+        </div><!--row-fluid-->
+        <div class="row-fluid">
+          <div class="span8" id="what_sorcery_is_this">
+            <h3>Cómo funciona ArgenWAMP</h3>
+            <ul>
+              <li>ArgenWamp es altamente disponible porque está hosteado en <a href="http://pages.github.com/" target="_blank">GitHub Pages</a>.</li>
+              <li>El código de argenWAMP está en la branch <code>master</code> del repo <a href="http://github.com/oskosk/argenwamp">http://github.com/oskosk/argenwamp</a>.
+              <li>La versión <abbr="">live</live> está en la branch <code>gh-pages</code> del mismo repo y ahí es donde aparece la magia de GitHub y mantiene esa página siempre online por el resto de la eternidad.</li>
+              <li>La estabilidad del mapa depende en parte de la estabilidad de la librería <a target="_blank" href="http://ign.gob.ar/argenmap">argenmap.jquery</a>, que es un servicio WEB del IGN.</li>
+
+            </ul>
+            <h4>Estructura de ArgenWAMP</h3>
+            <p>
+            ArgenWAMP tiene 3 partes y usa unas librerías hosteadas en <a target="_blank" href="http://cdnjs.com">cdnjs.com</a>. <em>Eventualmente, las voy a ofrecer minificadas</em>. Las partes son: 
+            </p>
+            <ul>
+              <li>Un <code>index.html</code> que es lo que estás viendo ahora</li>
+              <li>Un poco de javascript con forma de plugin de jQuery. El plugin está hecho siguiendo los patrones de diseño de <a href="https://github.com/jquery-boilerplate/jquery-boilerplate/">jQuery Boilerplate</a> así que es bastante reusable. Internamente, lo nombré  <strong>Argenmap Vis</strong> y por eso el archivo se llama <code>argenmapvis.jquery.js</code>.
+              <li>Un <code>iframe.html</code> que es el html que arma el mapa en pantalla completa que sirve para ser incrustado en un blog o cualquier web usando la etiqueta HTML <code>iframe</code>.</li>
+            </ul>
+            
+            <h4><em>Criteria</em></h4>
+            <ul>
+              <li>
+              Muchas personas están acostumbradas a las planillas de cálculo como estructuras de datos.
+              </li>
+              <li>
+                El código de esta herramienta consume JSON.
+              </li>
+              <li>
+                Google ofrece por cada documento publicado una url con el documento JSON que representa al documento spreadsheet. Es por eso que esta herramienta sirve para consumir JSON de otra fuente.
+              </li>
+              <li>
+                <strong>Sí, los "datos" quedan guardados en google</strong>. Pero, no hace falta guardar los datos más importantes del mundo en este tipo de mapas.
+              </li>
+              <li>
+                 Es una herramienta útil para bocetar mapas a partir de KML o servicios WMS (datos ya publicados conforme a estándares abiertos). 
+               </li>
+              <li>
+                Este proyecto se propone acercar los servicios WMS y los KML ya publicados a quienes no dispongan de mayores habilidades informáticas que el manejo de una planilla de cálculos y una cuenta de Google. 
+              </li>
+              <li>
+                Esta herramienta está construída como 2 html y una plugin de jquery. que interpreta json. Sea cual sea el origen (Google Docs, una URL de un documento JSON o un objeto javascript).
+              </li>
+            </ul>            
+          </div> <!--span-->
           <div class="span4">
              <!-- Place this tag where you want the widget to render. -->
             <div class="g-page" data-href="//plus.google.com/105397909156980633205" data-rel="publisher"></div>
@@ -186,50 +235,22 @@
               })();
             </script>
           </div>
-        </div><!--row-fluid-->
-        <div class="row-fluid">
-          <div class="span8">
-            <div class="alert">
-              <h3><em>Criteria</em></h3>
-              <ul>
-                <li>
-                Muchas personas están acostumbradas a las planillas de cálculo como estructuras de datos.
-                </li>
-                <li>
-                  El código de esta herramienta consume JSON.
-                </li>
-                <li>
-                  Google ofrece por cada documento publicado una url con el documento JSON que representa al documento spreadsheet. Es por eso que esta herramienta sirve para consumir JSON de otra fuente.
-                </li>
-                <li>
-                  <strong>Sí, los "datos" quedan guardados en google</strong>. Pero, no hace falta guardar los datos más importantes del mundo en este tipo de mapas.
-                </li>
-                <li>
-                   Es una herramienta útil para bocetar mapas a partir de KML o servicios WMS (datos ya publicados conforme a estándares abiertos). 
-                 </li>
-                <li>
-                  Este proyecto se propone acercar los servicios WMS y los KML ya publicados a quienes no dispongan de mayores habilidades informáticas que el manejo de una planilla de cálculos y una cuenta de Google. 
-                </li>
-                <li>
-                  Esta herramienta está construída como 2 html y una plugin de jquery. que interpreta json. Sea cual sea el origen (Google Docs, una URL de un documento JSON o un objeto javascript).
-                </li>
-              </ul>
-            </div><!--alert-->
-          </div>
         </div>
       </section>      
       <section id="generator">
         <div class="page-header">
-          <h2 >Construí tu mapa <small>En tu sitio o blog en poco tiempo.</small></h2>
+          <h2>Armá tu mapa <small>para tu sitio o blog.</small></h2>
         </div>
         <div class="row-fluid">
           <div class="span12">
-            <h3>Requerimientos</h3>
-            <ul>
-              <li>Que estés familiarizado con <a href="http://es.wikipedia.org/wiki/Google_Docs" target="_blank">Google Docs</a> y las hojas de cálculo.</li>
-              <li>Que tengas una <a href="https://accounts.google.com/SignUp" target="_blank">cuenta de Google Docs</a>.</li>
-              <li>Que entiendas aproximadamente lo que es <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a> y <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> si querés usar algo más que marcadores.</li>
-            </ul>
+            <div class="alert alert-success">
+              <h3>Requerimientos</h3>
+              <ul>
+                <li>Que estés familiarizado con <a href="http://es.wikipedia.org/wiki/Google_Docs" target="_blank">Google Docs</a> y las hojas de cálculo.</li>
+                <li>Que tengas una <a href="https://accounts.google.com/SignUp" target="_blank">cuenta de Google Docs</a>.</li>
+                <li>Que entiendas aproximadamente lo que es <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a> y <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> si querés usar algo más que marcadores.</li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="row-fluid">
@@ -243,10 +264,10 @@
           </div><!--span4-->
           <div class="span8">
             <p>
-              <em>Creá un nuevo mapa usando la plantilla. Es tan simple como completar campos de título, ubicación y/o URLs en las columnas apropiadas.</em>
+              <a target="_blank" class="btn btn-primary" href="https://drive.google.com/previewtemplate?id=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&mode=public">Copiá la Plantilla de Mapa &raquo;</a>
             </p>
             <p>
-              <a target="_blank" class="btn btn-primary" href="https://drive.google.com/previewtemplate?id=0AqdTbs1TYvZKdFlQVDNBdFVKSFZzci04UE5UYkpmYmc&mode=public">Plantilla de Google Spreadsheet &raquo;</a>
+              <em>Necesitás haber iniciado sesión con tu cuenta de Google para que la copia de la plantilla quede en tu Drive.</em>
             </p>
           </div><!--span8-->
         </div><!--row-fluid-->
@@ -260,6 +281,9 @@
           </h3>
           </div><!--span4-->
           <div class="span8">
+            <p>
+              Una vez que hiciste una copia de la plantilla de mapa e hiciste tus modificaciones a los marcadores para probar cómo funciona, tenés que <em>Publicar</em> la hoja de cálculo.
+            </p>
             <div class="alert alert-success alert-block">
               <h4>¿Cómo se publica una spreadshet?</h4>
               <ul>
@@ -288,7 +312,7 @@
         </div><!--row-fluid-->      
         <hr />
         <div class="row-fluid">
-          <div class="span4">
+          <div class="span4 well">
             <h3>Paso 3<br/>
               <small>
               Pegá la URL de tu spreadsheet
@@ -299,7 +323,7 @@
               harías para incrustar un video de Youtube por ejemplo).</em>
             </p>
           </div><!--span4-->
-          <div class="span8">
+          <div class="span8 well">
             <form id="create-form" class="form-horizontal">
               <fieldset >
                 <legend>Generador de mapa</legend>
