--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <h2><span class="wamp hidden-tablet hidden-phone">Web Anamorphic Maps Player</span><br/>
           <small>armá un mapa web de Argentina para incrustar en tu sitio <span class="strong">a partir de una hoja de cálculo </span></small>
         </h2>
-        <a href="#generator" class="btn btn-large btn-success">Armá tu mapa ahora &raquo;</a>
+        <a href="#generator" class="btn btn-large btn-success">Armá tu mapa en 3 pasos &raquo;</a>
       </div>
     </header>  
     <div class="container">
@@ -153,8 +153,8 @@
         <div class="row-fluid">
           <div class="span4">
             <p class="lead">
-              ArgenWamp es una herramienta de software libre que te permite construir mapas con datos
-              guardados en una Google Spreadsheet.
+              ArgenWAMP es una herramienta que te permite construir mapas web con datos
+              guardados en una Google Spreadsheet. El código de argenWAMP está disponible bajo una licencia libre.
             </p>            
           </div><!--span6-->
           <div class="span4">
@@ -181,7 +181,7 @@
             <ul>
               <li>ArgenWamp es altamente disponible porque está hosteado en <a href="http://pages.github.com/" target="_blank">GitHub Pages</a>.</li>
               <li>El código de argenWAMP está en la branch <code>master</code> del repo <a href="http://github.com/oskosk/argenwamp">http://github.com/oskosk/argenwamp</a>.
-              <li>La versión <abbr="">live</live> está en la branch <code>gh-pages</code> del mismo repo y ahí es donde aparece la magia de GitHub y mantiene esa página siempre online por el resto de la eternidad.</li>
+              <li>La versión <abbr="">live</live>, osea el sitio <code>argenwamp.com.ar</code> está en la branch <code>gh-pages</code> del mismo repo y ahí es donde aparece la magia de GitHub y mantiene esa página siempre online por el resto de la eternidad.</li>
               <li>La estabilidad del mapa depende de la estabilidad de la librería <a target="_blank" href="http://ign.gob.ar/argenmap">argenmap.jquery</a>, que es un servicio WEB del IGN.</li>
 
             </ul>
@@ -244,11 +244,11 @@
         <div class="row-fluid">
           <div class="span12">
             <div class="alert alert-success">
-              <h3>Requerimientos</h3>
+              <h3>Para que argenWAMP te sirva</h3>
               <ul>
-                <li>Que estés familiarizado con <a href="http://es.wikipedia.org/wiki/Google_Docs" target="_blank">Google Docs</a> y las hojas de cálculo.</li>
-                <li>Que tengas una <a href="https://accounts.google.com/SignUp" target="_blank">cuenta de Google Docs</a>.</li>
-                <li>Que entiendas aproximadamente lo que es <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a> y <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> si querés usar algo más que marcadores.</li>
+                <li>Tenés que estar familiarizado con <a href="http://es.wikipedia.org/wiki/Google_Docs" target="_blank">Google Docs</a> y las hojas de cálculo.</li>
+                <li>Necesitás tener una <a href="https://accounts.google.com/SignUp" target="_blank">cuenta de Google Docs</a>.</li>
+                <li>Y si querés usar algo más que masrcador, necesitás saber de <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a> y <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> si querés usar algo más que marcadores.</li>
               </ul>
             </div>
           </div>
