--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
               <ul>
                 <li>Tenés que estar familiarizado con <a href="http://es.wikipedia.org/wiki/Google_Docs" target="_blank">Google Docs</a> y las hojas de cálculo.</li>
                 <li>Necesitás tener una <a href="https://accounts.google.com/SignUp" target="_blank">cuenta de Google Docs</a>.</li>
-                <li>Y si querés usar algo más que masrcador, necesitás saber de <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a> y <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a> si querés usar algo más que marcadores.</li>
+                <li>Y si querés usar algo más que marcadores, necesitás saber de <a href="http://es.wikipedia.org/wiki/Web_Map_Service" target="_blank">WMS</a> y <a href="http://es.wikipedia.org/wiki/KML" target="_blank">KML</a>.</li>
               </ul>
             </div>
           </div>
